[tool.poetry]
name = "blog"
version = "0.1.0"
description = "Config and content for https://mikeanthonywild.com"
authors = ["Mike Wild <mike@mikeanthonywild.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pelican = "^4.2.0"
markdown = "^3.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
